--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../game/RobotGame/RobotGame.exe"
+export_path="../../../game/RobotGame.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -37,8 +37,8 @@ application/modify_resources=true
 application/icon="res://Assets/icons/icon_full_512x512.ico"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
-application/file_version="1.0.0.0"
-application/product_version="1.0.0.0"
+application/file_version="1.0.0.1"
+application/product_version="1.0.0.1"
 application/company_name="Spirichyels Entertanment"
 application/product_name="Robot Game"
 application/file_description="ну типа робот ходит и прыгает и там монеты собирать"
